--- a/backtogether/public/css/btcss.css
+++ b/backtogether/public/css/btcss.css
@@ -191,3 +191,7 @@ input[type=text]:placeholder, input[type=password]:placeholder {
     z-index: 1000;
     height: calc(100vh - 4rem);
 }
+
+#title-box::placeholder {
+    font-size:24px;
+}
