Finish posting and post feed

--- a/backtogether/public/css/btcss.css
+++ b/backtogether/public/css/btcss.css
@@ -195,3 +195,7 @@ input[type=text]:placeholder, input[type=password]:placeholder {
 #title-box::placeholder {
     font-size:24px;
 }
+
+.event-field::placeholder {
+    color:lightsteelblue;
+}
